Bug 141721 - Treeview not refreshed properly
Summary: Treeview not refreshed properly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-17 10:08 UTC by Heiko Tietze
Modified: 2021-04-23 10:14 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Styles Inspector with VCL gen (same for Qt) (12.26 KB, image/png)
2021-04-17 10:08 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2021-04-17 10:08:03 UTC
Created attachment 171251 [details]
Styles Inspector with VCL gen (same for Qt)

Spin-off from bug 136764: if the text length exceeds the column size in a treeview it's continued at the second column, if empty. Probably a refresh problem. What do you think, Caolan?
Comment 1 bugzilla2 2021-04-17 10:27:42 UTC
confirmed :D
Comment 2 Caolán McNamara 2021-04-21 13:45:57 UTC
This is a glitch/quick which affected the gen-mode expert dialog treeview too, lets reuse the workaround used there.
Comment 3 Commit Notification 2021-04-22 08:58:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/78df8f9dc1d28f5390aedb634b07817a22ce989c

Resolves: tdf#141721 text from 1st col not clipped if 2nd col is empty

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Heiko Tietze 2021-04-23 10:14:18 UTC
Thank you, Caolan!