Resolves: tdf#141721 text from 1st col not clipped if 2nd col is empty

Change-Id: I07257c59c20c3a2aeb789bbb370955e9e70226ca